# ha-hyxi-cloud

./: .coderabbit.yaml  .codespellrc  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CONTRIBUTING.md  README.md  SECURITY.md  api.py  benchmark.py  benchmark_sensor.py  config_flow.py  fix_test.py  hacs.json  info.md  manifest.json  mypy.ini  plan_review_request.txt  pr232.patch  pr236.patch  pyproject.toml  requirements.txt  requirements_test.txt  resolver_sensor_error_handling.py  sensor.py  test_314_comma.py
.agent/workflows/: create-release-notes.md
.agents/: AGENTS.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_device.yml
.github/workflows/: cflite_pr.yml  codeql.yml  dependabot-auto-merge.yml  dependency-submission.yml  ha-preview.yml  label-check.yml  labeler.yml  lint.yml  pr-management.yml  pre-commit.yml  process-pr.yml  receive-pr.yml  release-drafter.yml  release-publisher.yml  scorecards.yml  security.yml  stale.yml  sync-manifest.yml  tests.yml  update-badge.yml  validate.yml
.jules/: bolt.md
benchmarks/: benchmark_sensor.py  benchmark_switch_setup.py
custom_components/: strings.json
custom_components/hyxi_cloud/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  en.json  engine.py  entity.py  manifest.json  number.py  protection.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/hyxi_cloud/translations/: af.json  cs.json  da.json  de.json  en.json  es.json  fi.json  fr.json  hu.json  it.json  ja.json  nb.json  nl.json  pl.json  pt-BR.json  pt.json  ru.json  sv.json  tr.json  zh-Hans.json
dev_env/: check_metrics.py  docker-compose.yml  manage.sh
scripts/: check_versions.py  sync_translations.py
tests/: benchmark_device_info.py  conftest.py  test_alarm_push.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_const.py  test_coordinator.py  test_coordinator_extra.py  test_engine.py  test_entity.py  test_fuzz.py  test_init.py  test_micro_inverter.py  test_number.py  test_parsers.py  test_protection.py  test_push_integration.py  test_sensor.py  test_sensor_error_handling.py  test_sensor_logic.py  test_services.py  test_switch.py  test_translations.py  test_vpp.py
tests/integration/: test_real_engine.py
