[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-hyxi-cloud"
version = "1.3.9"
description = "HYXI ⚡️🔋☀️ Integration for HomeAssistant using HYXI Cloud ☁️"
readme = "README.md"
authors = [
    { name = "Veldkornet" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.4",
    "hyxi-cloud-api==1.0.10"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "hypothesis>=6.100.0",
    "pytest-cov>=5.0.0",
    "ruff==0.15.9",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (keeps your imports organized)
    "UP",  # pyupgrade (keeps code modern)
    "B",   # flake8-bugbear (catches common bugs)
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-internal rules
]
ignore = ["E501", "N818", "S105"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "N802"]
"custom_components/hyxi_cloud/__init__.py" = ["N812"]
"tests/test_token_handling.py" = ["N802"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.14"
show_error_codes = true
incremental = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pylint.messages_control]
disable = [
    "line-too-long",  # Turns off C0301 so Ruff can do its job in peace
    "import-error",               # E0401: Ignores missing HA/pytest imports
    "too-few-public-methods",     # R0903: Standard for HA entities/mocks
    "too-many-instance-attributes",# R0902: Standard for HA entities
    "too-many-branches",          # R0912: Expected in complex native_value logic
    "too-many-return-statements", # R0911: Expected in native_value logic
    "too-many-nested-blocks",     # R1702: Expected with our anti-dip logic
    "too-many-locals",            # R0914: Expected in async_setup_entry
    "missing-class-docstring",    # C0115: Optional for test mocks
    "missing-function-docstring", # C0116: Optional for standard HA overrides
    "try-except-raise",           # W0706: Expected in intentional pass-throughs
    "redefined-outer-name",       # W0621: Standard for pytest fixtures
    "import-outside-toplevel",    # C0415: Standard for HA test module reload
    "protected-access",     # W0212: Necessary for testing internal state
    "reimported",                 # W0404: Expected with importlib.reload hacks
    "duplicate-code",             # R0801: Common setup across test files
    "unused-argument",            # W0613: Standard for unused test fixtures
]
