[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-hyxi-cloud"
version = "1.3.9"
description = "HYXI ⚡️🔋☀️ Integration for HomeAssistant using HYXI Cloud ☁️"
readme = "README.md"
authors = [
    { name = "Veldkornet" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.4",
    "hyxi-cloud-api==1.1.1"
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "S", "N", "PTH", "RUF"
]
ignore = ["E501", "N818", "S105"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "N802"]
"custom_components/hyxi_cloud/__init__.py" = ["N812"]

[tool.mypy]
python_version = "3.14"
show_error_codes = true
incremental = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pylint.similarities]
min-similarity-lines = 100
